# amazon-returns

./: .breakpoints  .gitignore  README.md  main.py  make_celery.py  pyproject.toml  requirements.txt
website/: __init__.py  amazonAPI.py  auth.py  connectAmazon.py  database.py  download_inventory_to_change.py  download_pdf_inventoryChange.py  download_pdf_queue.py  models.py  stripePay.py  tasks.py  views.py
website/static/: home.js  script-ajax.js  styles.css
website/static/amaze-software-logo/: info.txt
website/templates/: account.html  admin.html  base.html  edit_name.html  forgot_password.html  home.html  job_info.html  job_info_queue.html  jobs.html  landing.html  login.html  password_reset_sent.html  paymentFailed.html  reset_password.html  sign_up.html  signup.html  stripeHome.html  support.html  task_info_inventory.html  task_inventory_info.html  tasks.html  thanks.html  tutorial.html
website/templates/security/: register_user.html
