[tool.poetry]
name = "repl_nix_amazon-returns"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Security = "^3.0.0"
SQLAlchemy = "^2.0.19"
Flask = "^2.3.2"
Flask-Migrate = "^4.0.4"
stripe = "^5.5.0"
flask-mailman = "^0.3.0"
Flask-SQLAlchemy = "^3.0.5"
reportlab = "^4.0.4"
requests = "^2.31.0"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
